--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/serve-static": "^3.0.0",
     "@nestjs/typeorm": "^9.0.1",
+    "@types/pdfkit": "^0.12.8",
+    "pdfkit": "^0.13.0",
     "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
